# oai-cn5g-amf

./: .gitignore  CHANGELOG.md
ci-scripts/: Jenkinsfile-GitLab-Docker  generateHtmlReport.py
docker/: Dockerfile.amf.rhel9  Dockerfile.amf.ubuntu
openshift/: build-config.yaml
src/amf-app/: CMakeLists.txt  amf_app.cpp  amf_app.hpp  amf_config.cpp  amf_config.hpp  amf_config_yaml.cpp  amf_config_yaml.hpp  amf_event_sig.hpp  amf_n1.cpp  amf_n1.hpp  amf_n2.cpp  amf_n2.hpp  amf_profile.cpp  amf_profile.hpp  amf_sbi.cpp  amf_sbi.hpp  amf_statistics.cpp  amf_statistics.hpp  authentication.cpp
src/common/: CMakeLists.txt  amf.hpp  amf_msg.hpp  amf_sbi_helper.cpp  amf_sbi_helper.hpp  logger.hpp
src/contexts/: CMakeLists.txt  gNB_context.hpp  nas_context.hpp  ue_context.cpp  ue_context.hpp
src/itti/: itti.cpp  itti.hpp  itti_msg.hpp
src/itti/msgs/: itti_msg_amf_app.hpp  itti_msg_n2.hpp  itti_msg_sbi.hpp
src/nas/: CMakeLists.txt
src/ngap/: CMakeLists.txt  ngap_app.cpp  ngap_message_callback.hpp
src/oai-amf/: CMakeLists.txt  main.cpp
src/sbi/: CMakeLists.txt  amf_http2_server.cpp  amf_http2_server.hpp
src/sbi/api/: AMFConfigurationApi.cpp  AMFConfigurationApi.h  IndividualSubscriptionDocumentApi.cpp  IndividualSubscriptionDocumentApi.h  IndividualSubscriptionDocumentApiEventExposure.cpp  IndividualSubscriptionDocumentApiEventExposure.h  IndividualUeContextDocumentApi.cpp  IndividualUeContextDocumentApi.h  N1MessageNotifyApi.cpp  N1MessageNotifyApi.h  N1N2IndividualSubscriptionDocumentApi.cpp  N1N2IndividualSubscriptionDocumentApi.h  N1N2MessageCollectionDocumentApi.cpp  N1N2MessageCollectionDocumentApi.h  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApi.cpp  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApi.h  NonUEN2MessageNotificationIndividualSubscriptionDocumentApi.cpp  NonUEN2MessageNotificationIndividualSubscriptionDocumentApi.h  NonUEN2MessagesCollectionDocumentApi.cpp  NonUEN2MessagesCollectionDocumentApi.h  NonUEN2MessagesSubscriptionsCollectionDocumentApi.cpp  NonUEN2MessagesSubscriptionsCollectionDocumentApi.h  StatusNotifyApi.cpp  StatusNotifyApi.h  SubscriptionsCollectionDocumentApi.cpp  SubscriptionsCollectionDocumentApi.h  SubscriptionsCollectionDocumentApiEventExposure.cpp  SubscriptionsCollectionDocumentApiEventExposure.h
src/sbi/impl/: AMFConfigurationApiImpl.cpp  AMFConfigurationApiImpl.h  IndividualSubscriptionDocumentApiImpl.cpp  IndividualSubscriptionDocumentApiImpl.h  IndividualSubscriptionDocumentApiImplEventExposure.h  IndividualUeContextDocumentApiImpl.cpp  IndividualUeContextDocumentApiImpl.h  N1MessageNotifyApiImpl.cpp  N1MessageNotifyApiImpl.h  N1N2IndividualSubscriptionDocumentApiImpl.cpp  N1N2MessageCollectionDocumentApiImpl.cpp  N1N2MessageCollectionDocumentApiImpl.h  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApiImpl.cpp  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApiImpl.h  NonUEN2MessagesCollectionDocumentApiImpl.cpp  NonUEN2MessagesCollectionDocumentApiImpl.h  NonUEN2MessagesSubscriptionsCollectionDocumentApiImpl.cpp  NonUEN2MessagesSubscriptionsCollectionDocumentApiImpl.h  StatusNotifyApiImpl.cpp  StatusNotifyApiImpl.h  SubscriptionsCollectionDocumentApiImpl.cpp  SubscriptionsCollectionDocumentApiImpl.h  SubscriptionsCollectionDocumentApiImplEventExposure.cpp  SubscriptionsCollectionDocumentApiImplEventExposure.h
src/sctp/: CMakeLists.txt  sctp_server.cpp  sctp_server.hpp
src/utils/: 3gpp_conversions.cpp  3gpp_conversions.hpp  CMakeLists.txt  amf_conversions.cpp  amf_conversions.hpp  mime_parser.cpp
